--- a/!config.yaml
+++ b/!config.yaml
@@ -3,4 +3,4 @@ DB:
   user_password: ""
   appid: "V2wizxAwwsXhTCMkVErqXdxU-MdYXbMMI"
   appkey: "jhLTCii7GAW5Q4DN00kvcIa2"
-  email: "eternalkiri@outlook.com"
+  email: ""
