--- a/!config.yaml
+++ b/!config.yaml
@@ -1,6 +1,6 @@
 DB:
-  user_name: "ElliasK"
-  user_password: "Kanamemadoka!"
+  user_name: ""
+  user_password: ""
   appid: "V2wizxAwwsXhTCMkVErqXdxU-MdYXbMMI"
   appkey: "jhLTCii7GAW5Q4DN00kvcIa2"
   email: ""
